# datafun-07-ml

./: README.md  pyproject.toml  requirements.txt
ch10/: complexnumber2.py  salariedcommissionemployee.py
ch10/snippets_ipynb/: 10_16.ipynb
ch10/snippets_py/: 10_15.py  10_16.py  salariedcommissionemployee.py
ch15/snippets_ipynb/: 15_02-03.ipynb  15_04.ipynb  15_05.ipynb  15_06.ipynb
ch15/snippets_py/: 15_04.py  15_05.py  15_06.py  15_07.py
notebooks/: tmims_ml.ipynb
