
[project]
name = "datafun-07-ml"
version = "0.1.0"
description = "Guided machine learning project with Jupyter and data science tools."
authors = [{ name = "Tammy Mims" }]
requires-python = ">=3.8"
dependencies = [
	"jupyterlab",
	"numpy",
	"pandas",
	"pyarrow",
	"matplotlib",
	"seaborn",
	"scipy",
	"scikit-learn"
]

[tool.setuptools]
package-dir = {"" = "."}
